<resources>
    <string name="app_name">aniMaL</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="app_full_name">Team 3 aniMaL</string>
    <string name="is_this_classification_correct">Is this classification correct?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="content_description_capture_button">Capture button</string>
    <string name="loading">Loading</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
